--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,12 @@
 * {
-  margin: 0;
-  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  background-color: grey;
+  /* background-color: grey; */
+}
+
+body {
+  background-image: url('./assets/bank.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
